# KGL

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cuboid.h  IndexBuffer.h  KiCamera.h  KiHeader.h  KiIndexBuffer.cpp  KiIndexBuffer.h  KiLogger.cpp  KiLogger.h  KiRender.h  KiShader.cpp  KiShader.h  KiTexture.cpp  KiTexture.h  KiVertexArray.cpp  KiVertexArray.h  KiVertexBuffer.cpp  KiVertexBuffer.h  KiVertexBufferLayout.cpp  KiVertexBufferLayout.h  Makefile  Object.h  README.md  Render.h  Shader.cpp  Shader.h  Texture.h  Transformation.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  cmake_install.cmake  main  main.cpp  test.cpp
bac/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
dep/glew/lib/Release/ubuntu18/: libGLEW.so.2.1.0
example/: example.cpp
inc/: Buffer.h  Geometry.h  Header.h  IndexBuffer.h  Logger.h  Render.h  Shader.h  Texture.h  Transformation.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
inc/Geometry/: Axis.h  Cuboid.h  Line.h  Object.h  Point copy.h  Point.h  Vertice.h
res/shaders/: shader.hlsl  shader_line.hlsl
src/: IndexBuffer.cpp  Logger.cpp  Render.cpp  Shader.cpp  Texture.cpp  Transformation.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
